[gd_scene load_steps=2 format=3 uid="uid://bornr16h232qk"]

[ext_resource type="Script" path="res://Levels/Scripts/lobby.gd" id="1_s3vem"]

[node name="lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -2.0
offset_right = 4.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s3vem")

[node name="Players" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = -205.0
offset_right = 143.0
offset_bottom = 233.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayersList" type="ItemList" parent="Players"]
layout_mode = 0
offset_left = 32.0
offset_top = 46.0
offset_right = 260.0
offset_bottom = 349.0

[node name="Find" type="LinkButton" parent="Players"]
layout_mode = 0
offset_left = 3.0
offset_top = 444.0
offset_right = 285.0
offset_bottom = 478.0
text = "узнать свой IP"

[node name="Start" type="Button" parent="Players"]
layout_mode = 0
offset_left = 36.0
offset_top = 361.0
offset_right = 257.0
offset_bottom = 421.0
text = "START"

[node name="Connect" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.33
anchor_top = 0.364
anchor_right = 0.673
anchor_bottom = 0.637
offset_left = -0.160004
offset_top = 0.127991
offset_right = -0.296021
offset_bottom = 0.223999
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="LineEdit" parent="Connect"]
layout_mode = 0
offset_left = 28.0
offset_top = 32.0
offset_right = 214.0
offset_bottom = 63.0
text = "Player"

[node name="IP" type="LineEdit" parent="Connect"]
layout_mode = 0
offset_left = 28.0
offset_top = 78.0
offset_right = 214.0
offset_bottom = 109.0
text = "127.0.0.1"

[node name="Host" type="Button" parent="Connect"]
layout_mode = 0
offset_left = 302.0
offset_top = 32.0
offset_right = 368.0
offset_bottom = 59.0
text = "Host"

[node name="Join" type="Button" parent="Connect"]
layout_mode = 0
offset_left = 302.0
offset_top = 73.0
offset_right = 368.0
offset_bottom = 100.0
text = "Join"

[node name="ErrorLabel" type="Label" parent="Connect"]
layout_mode = 0
offset_left = 31.0
offset_top = 123.0
offset_right = 367.0
offset_bottom = 155.0

[connection signal="pressed" from="Players/Find" to="." method="_on_find_public_ip_pressed"]
[connection signal="pressed" from="Players/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Connect/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Connect/Join" to="." method="_on_join_pressed"]
